2005-02-27    <katia_dilkina@verizon.net>

	* mkpatch: get $src $ref and $work as arguments.

	* Makefile: add rules for building slashem patches

2004-11-22  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack-nhlaunch.el (nethack-network-server): new defvar
	(nethack-network-port): likewise
	(nethack-network-user): likewise
	(nethack-network-password): likewise
	(nethack-network-game): likewise
	(nh-network-server): remove
	(nh-network-port): likewise
	(nh-network-user): likewise
	(nh-network-filter): use the new nethack-network-* variables.
	(nethack-connect-to-server): ask for the password. Ask for the
	game when universal arg is given.

	* nhlaunch.c (games): make nethack the first entry.

	* nethack-nhlaunch.el (nh-network-game): new defvar
	(nh-network-filter): send the game to play
	(nethack-connect-to-server): take another arg, game.

	* nhlaunch.c (read_cmd): new command, list
	(struct game_t): new struct
	(games): new global
	(NETHACK_PROGRAM): remove
	(find_program): new function
	(list_programs): likewise
	(read_cmd): play takes an argument and uses find_program to
	determine which program to execlp.
	(read_cmd): remove debugging output

2004-11-19  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack-nhlaunch.el (nethack-connect-to-server): make autoload
	require nethack.

	* nethack.el (nethack): make autoload

2004-11-19  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-add-menu-hook): new hook

	* nethack-example.el (nethack-x-highlights): new defvar
	(nethack-x-highlight-option): new function

	* nethack-cmd.el (technique): new nethack command

	* nethack-api.el (nhapi-add-menu): run the nethack-add-menu-hook.

2004-11-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* mkpatch: src, ref, and work are pulled from args 1, 2, and 3.

	* Makefile: Add rules for building slashem patches

	* nethack.el (nethack): call nethack-start with the process as an
	arg.
	(nethack-connect-to-server): remove
	(nethack-is-running): new function